--- a/Views/Payments/Return.cshtml
+++ b/Views/Payments/Return.cshtml
@@ -14,5 +14,5 @@
         <p>Status transaction is not known.</p>
     }
 
-    <a href="@Url.Action("Payments/Index")" class="btn btn-primary">Return to Payment</a>
+    <a href="@Url.Action("Index", "Payments")   " class="btn btn-primary">Return to Payment</a>
 </div>
